# sedgewick

./: .gitignore  1.16.c  1.3.c  CMakeLists.txt  output.ppm  ppm_example.c  str-qsort-no-alloc.c
ch01/: 1.1.c  1.2.c  1.4.c
statics/: 1.20.c
